--- a/App/src/main/resources/application.yaml
+++ b/App/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
+  passphraseUrl: "http://host:8090/"
 
 spring:
   datasource:
