--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,113 @@
     <description>k8s</description>
     <packaging>pom</packaging>
 
+    <properties>
+        <java.version>17</java.version>
+        <liquibase.core.version>4.24.0</liquibase.core.version>
+        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <org.projectlombok.version>1.18.22</org.projectlombok.version>
+        <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
+        <org.springframework.boot.configuration.processor.version>2.4.1</org.springframework.boot.configuration.processor.version>
+        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <spring.boot.starter.version>3.2.1</spring.boot.starter.version>
+        <spring.boot.starter.jdbc.version>3.2.1</spring.boot.starter.jdbc.version>
+        <spring.boot.starter.data.jpa.version>3.2.1</spring.boot.starter.data.jpa.version>
+        <spring.boot.starter.webflux.version>3.2.1</spring.boot.starter.webflux.version>
+        <spring.boot.starter.web.version>3.2.1</spring.boot.starter.web.version>
+        <spring.boot.starter.aop.version>3.2.1</spring.boot.starter.aop.version>
+        <reactor.core.version>3.5.3</reactor.core.version>
+        <postgresql.version>42.6.0</postgresql.version>
+        <spring.boot.starter.test>3.2.1</spring.boot.starter.test>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+
+            <!-- STARTERS -->
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>${spring.boot.starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+                <version>${spring.boot.starter.jdbc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring.boot.starter.data.jpa.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-webflux</artifactId>
+                <version>${spring.boot.starter.webflux.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot.starter.web.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${spring.boot.starter.aop.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring.boot.starter.test}</version>
+            </dependency>
+
+            <!-- DEPENDENCY -->
+
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase.core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${org.projectlombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${org.mapstruct.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>${org.springframework.boot.configuration.processor.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-core</artifactId>
+                <version>${reactor.core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
     <modules>
         <module>App</module>
         <module>Host</module>
