--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <spring.boot.starter.aop.version>3.2.1</spring.boot.starter.aop.version>
         <reactor.core.version>3.5.3</reactor.core.version>
         <postgresql.version>42.6.0</postgresql.version>
-        <spring.boot.starter.test>3.2.1</spring.boot.starter.test>
+        <spring.boot.starter.test>3.3.2</spring.boot.starter.test>
+        <org.springdoc.version>2.6.0</org.springdoc.version>
     </properties>
 
     <dependencyManagement>
@@ -120,6 +121,12 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${org.springdoc.version}</version>
             </dependency>
 
         </dependencies>
