--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,8 @@ yarn-error.log
 
 ### Terraform ###
 # Local Terraform state files
-*terraform.tfstate
-*terraform.tfstate.backup
+*.tfstate
+*.tfstate.backup
 
 # Crash log files
 crash.log
