--- a/App/src/main/resources/application-deployment.yaml
+++ b/App/src/main/resources/application-deployment.yaml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:postgresql://${DB_NAME:5432}/${DB_USERNAME}"
-    username: "${DB_USERNAME}"
-    password: "${DB_USER_PASS}"
+    url: "jdbc:postgresql://db:5432/${POSTGRES_DB}"
+    username: "${POSTGRES_USER}"
+    password: "${POSTGRES_PASSWORD}"
 
   liquibase:
     change-log: "classpath:liquibase-changeLog.xml"
