--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "prHourlyLimit": 0,
   "prConcurrentLimit": 0,
   "automerge": false,
+  "schedule": ["before 3am on Monday"],
   "groupName": "all-dependencies",
   "packageRules": [
     {
