--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -9,9 +9,9 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>App</artifactId>
+    <artifactId>Server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>App</name>
+    <name>Server</name>
 
 
     <dependencies>
