--- a/FooService/dockerfile
+++ b/FooService/dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 RUN apk add --no-cache bash
 
 # Copy the jar file into the container
-COPY target/Host-0.0.1-SNAPSHOT.jar /app/Host-0.0.1-SNAPSHOT.jar
+COPY target/FooService-0.0.1-SNAPSHOT.jar /app/fooservice.jar
 
 # Set bash as the default shell and run the Java application
-ENTRYPOINT ["/bin/bash", "-c", "java -jar /app/Host-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["/bin/bash", "-c", "java -jar /app/fooservice.jar"]
