--- a/Server/dockerfile
+++ b/Server/dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 RUN apk add --no-cache bash
 
 # Copy the jar file into the container
-COPY target/App-0.0.1-SNAPSHOT.jar /app/App-0.0.1-SNAPSHOT.jar
+COPY target/Server-0.0.1-SNAPSHOT.jar /app/server.jar
 
 # Set bash as the default shell and run the Java application with JAVA_OPTS
-ENTRYPOINT ["/bin/bash", "-c", "java $JAVA_OPTS -jar /app/App-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["/bin/bash", "-c", "java $JAVA_OPTS -jar /app/server.jar"]
