--- a/Server/src/main/resources/application-deployment.yaml
+++ b/Server/src/main/resources/application-deployment.yaml
@@ -22,7 +22,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
-  passphraseUrl: "http://host:8090/"
+  passphraseUrl: "http://fooservice:8090/passphrase"
 
 audit:
   patterns: '/**'
