--- a/Server/src/test/resources/application.yaml
+++ b/Server/src/test/resources/application.yaml
@@ -14,7 +14,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
-  passphraseUrl: "http://host:8091/"
+  passphraseUrl: "http://fooservice:8091/passphrase"
 
 audit:
   patterns: '/**'
