--- a/FooService/pom.xml
+++ b/FooService/pom.xml
@@ -68,7 +68,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.sandbox.k8s.controller.K8sApplication</mainClass>
+                    <mainClass>com.sandbox.k8s.FooServiceApplication</mainClass>
                     <layout>JAR</layout>
                     <excludes>
                         <exclude>
