--- a/Server/src/main/resources/application.yaml
+++ b/Server/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:postgresql://db:5432/dev_user"
+    url: "jdbc:postgresql://localhost:5432/dev_user"
     username: "dev_user"
     password: "dev"
 
