--- a/Server/src/main/resources/application.yaml
+++ b/Server/src/main/resources/application.yaml
@@ -1,4 +1,12 @@
+server:
+  port: 8080
+
 spring:
+  datasource:
+    url: "jdbc:postgresql://db:5432/dev_user"
+    username: "dev_user"
+    password: "dev"
+
   liquibase:
     change-log: "classpath:liquibase-changeLog.xml"
 
@@ -14,7 +22,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
-  passphraseUrl: "http://host:8091/"
+  passphraseUrl: "http://foo:8090/"
 
 audit:
   patterns: '/**'
