--- a/Server/src/test/resources/application.yaml
+++ b/Server/src/test/resources/application.yaml
@@ -1,12 +1,4 @@
-server:
-  port: 8080
-
 spring:
-  datasource:
-    url: "jdbc:postgresql://db:5432/${POSTGRES_DB}"
-    username: "${POSTGRES_USER}"
-    password: "${POSTGRES_PASSWORD}"
-
   liquibase:
     change-log: "classpath:liquibase-changeLog.xml"
 
@@ -22,7 +14,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
-  passphraseUrl: "http://host:8090/"
+  passphraseUrl: "http://foo:8091/"
 
 audit:
   patterns: '/**'
