--- a/Server/src/main/resources/application-deployment.yaml
+++ b/Server/src/main/resources/application-deployment.yaml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:postgresql://db:5432/dev_user"
-    username: "dev_user"
-    password: "dev"
+    url: "jdbc:postgresql://db:5432/${POSTGRES_DB}"
+    username: "${POSTGRES_USER}"
+    password: "${POSTGRES_PASSWORD}"
 
   liquibase:
     change-log: "classpath:liquibase-changeLog.xml"
@@ -22,7 +22,7 @@ files:
 
 data:
   exampleUri: "https://jsonplaceholder.typicode.com/posts"
-  passphraseUrl: "http://host:8090/"
+  passphraseUrl: "http://foo:8090/"
 
 audit:
   patterns: '/**'
