--- a/Foo/pom.xml
+++ b/Foo/pom.xml
@@ -69,7 +69,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.sandbox.k8s.controller.K8sApplication</mainClass>
+                    <mainClass>com.sandbox.k8s.FooApp</mainClass>
                     <layout>JAR</layout>
                     <excludes>
                         <exclude>
