--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -118,7 +118,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.sandbox.k8s.controller.K8sApplication</mainClass>
+                    ServerApp
                     <layout>JAR</layout>
                     <excludes>
                         <exclude>
