--- a/Foo/pom.xml
+++ b/Foo/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.sandbox</groupId>
-        <artifactId>k8s</artifactId>
+        <artifactId>fen</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -69,7 +69,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.sandbox.k8s.FooApp</mainClass>
+                    <mainClass>com.sandbox.foo.FooApp</mainClass>
                     <layout>JAR</layout>
                     <excludes>
                         <exclude>
