--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.sandbox</groupId>
-        <artifactId>k8s</artifactId>
+        <artifactId>fen</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -118,7 +118,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    ServerApp
+                    <mainClass>com.sandbox.server.ServerApp</mainClass>
                     <layout>JAR</layout>
                     <excludes>
                         <exclude>
