--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring.boot.starter.webflux.version>3.4.3</spring.boot.starter.webflux.version>
         <spring.boot.starter.web.version>3.4.3</spring.boot.starter.web.version>
         <spring.boot.starter.aop.version>3.4.3</spring.boot.starter.aop.version>
+        <spring.kafka.version>3.3.1</spring.kafka.version>
         <reactor.core.version>3.7.3</reactor.core.version>
         <postgresql.version>42.7.5</postgresql.version>
         <spring.boot.starter.test>3.4.3</spring.boot.starter.test>
@@ -145,6 +146,12 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${org.testcontainers.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${spring.kafka.version}</version>
             </dependency>
 
         </dependencies>
