Added Utility module Centralize topic name position

--- a/Foo/pom.xml
+++ b/Foo/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- INTERNAL DEPENDENCIES -->
+        <dependency>
+            <groupId>com.sandbox</groupId>
+            <artifactId>Util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
