Added kafka consumer for Server module

--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -110,6 +110,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
         <!-- INTERNAL DEPENDENCIES -->
         <dependency>
             <groupId>com.sandbox</groupId>
